--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-iwarm-tools",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "vue table component",
   "main": "libs/index.js",
   "author": "https://github.com/0wangxiaowei",
@@ -17,6 +17,7 @@
   "dependencies": {
     "nprogress": "^0.2.0",
     "tapable": "^2.2.0",
+    "transform-runtime": "0.0.0",
     "vue": "^2.2.6",
     "vue-loader": "^12.2.1",
     "vue-router": "^2.4.0",
